Method queries were written for repositories and a lot of changes were done