@@ -1,6 +1,7 @@
 package hospital.hospital_system.service.impl;
 
 import hospital.hospital_system.entity.Room;
+import hospital.hospital_system.enums.RoomEnum;
 import hospital.hospital_system.payload.ApiResult;
 import hospital.hospital_system.payload.RoomDTO;
 import hospital.hospital_system.repository.RoomRepository;
@@ -10,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,47 +21,66 @@ public class RoomServiceImpl implements RoomService {
     public ApiResult<List<RoomDTO>> getAllRooms() {
         List<RoomDTO> rooms = roomRepository.findAll()
                 .stream()
-                .map(room -> new RoomDTO(room.getId(), room.getName(), room.isStatus()))
-                .collect(Collectors.toList());
+                .map(RoomServiceImpl::getRoomDTO)
+                .toList();
         return ApiResult.success(rooms);
     }
 
     @Override
     public ApiResult<RoomDTO> getRoom(Integer id) {
-        Optional<Room> roomOptional = roomRepository.findById(id);
-        return roomOptional.map(room -> ApiResult.success(new RoomDTO(room.getId(), room.getName(), room.isStatus())))
+        Optional<Room> optionalRoom = roomRepository.findById(id);
+        return optionalRoom.map(room -> ApiResult.success(getRoomDTO(room)))
                 .orElseGet(() -> ApiResult.error("Room not found"));
     }
 
     @Override
-    public ApiResult<RoomDTO> create(RoomDTO roomDTO) {
+    public ApiResult<RoomDTO> createRoom(RoomDTO roomDTO) {
+        RoomEnum name = roomDTO.getName();
+        Optional<Room> optionalRoom = roomRepository.findByNameAndDeletedFalse(name);
+
+        if (optionalRoom.isPresent()) {
+            return ApiResult.error("Room already exists with name " + name);
+        }
+
         Room room = new Room();
         room.setName(roomDTO.getName());
         room.setStatus(roomDTO.isStatus());
         roomRepository.save(room);
-        return ApiResult.success(new RoomDTO(room.getId(), room.getName(), room.isStatus()));
+
+        return ApiResult.success(getRoomDTO(room));
     }
 
     @Override
-    public ApiResult<RoomDTO> update(Integer id, RoomDTO roomDTO) {
-        Optional<Room> roomOptional = roomRepository.findById(id);
-        if (roomOptional.isPresent()) {
-            Room room = roomOptional.get();
+    public ApiResult<RoomDTO> updateRoom(Integer id, RoomDTO roomDTO) {
+        Optional<Room> optionalRoom = roomRepository.findById(id);
+
+        if (optionalRoom.isPresent()) {
+            Room room = optionalRoom.get();
             room.setName(roomDTO.getName());
             room.setStatus(roomDTO.isStatus());
+
             roomRepository.save(room);
-            return ApiResult.success(new RoomDTO(room.getId(), room.getName(), room.isStatus()));
+
+            return ApiResult.success(getRoomDTO(room));
         }
         return ApiResult.error("Room not found");
     }
 
     @Override
-    public ApiResult<RoomDTO> delete(Integer id) {
-        Optional<Room> roomOptional = roomRepository.findById(id);
-        if (roomOptional.isPresent()) {
-            roomRepository.deleteById(id);
+    public ApiResult<RoomDTO> deleteRoom(Integer id) {
+        Optional<Room> optionalRoom = roomRepository.findById(id);
+
+        if (optionalRoom.isPresent()) {
+            Room room = optionalRoom.get();
+            room.setDeleted(true);
+            roomRepository.save(room);
+
             return ApiResult.success("Room deleted successfully");
         }
         return ApiResult.error("Room not found");
+    }
+
+    private static RoomDTO getRoomDTO(Room room) {
+        return new RoomDTO(room.getId(), room.getName(), room.isStatus());
     }
 }
